--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,9 +2,14 @@ services:
   traefik:
     image: traefik:latest
     container_name: traefik
+    restart: unless-stopped
+    security_opt:
+      - no-new-privileges:true
     command:
+      - "--global.sendAnonymousUsage=false"
       - "--api.insecure=true"
       - "--providers.docker=true"
+      - "--providers.docker.exposedbydefault=false"
       - "--api.dashboard=true"
       - "--entrypoints.web.address=:80"
       - "--entrypoints.websecure.address=:443"
@@ -12,11 +17,15 @@ services:
       - "--certificatesresolvers.myresolver.acme.email=prasverma@gmail.com"
       - "--certificatesresolvers.myresolver.acme.storage=/letsencrypt/acme.json"
     ports:
-      - "80:80"
-      - "443:443"
+      - target: 80
+        published: 80
+        protocol: tcp
+      - target: 443
+        published: 443
+        protocol: tcp
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
-      - "./letsencrypt:/letsencrypt"
+      - "traefik-certificates:/letsencrypt"
     networks:
       - microservices-network
 
@@ -50,3 +59,4 @@ networks:
 
 volumes:
   images_data:
+  traefik-certificates:
